Disable word-based suggestions in editor config
Updated the editor configuration in config.html to set wordBasedSuggestions to false and disable word suggestions in the suggestion widget. This change aims to refine the suggestion behavior for a more focused coding experience.

--- a/www/config.html
+++ b/www/config.html
@@ -129,6 +129,8 @@
             insertSpaces: true,
             quickSuggestions: { other: true, comments: false, strings: true },
             suggestOnTriggerCharacters: true,
+            wordBasedSuggestions: false,
+            suggest: { showWords: false },
             scrollBeyondLastLine: false,
         });
 
